feat: Introduce ink. Shipping app with a new shipping selector, NFS verification service, order detail view, and a product deletion utility.

--- a/extensions/ink-cart-selector/locales/en.default.json
+++ b/extensions/ink-cart-selector/locales/en.default.json
@@ -1,5 +1,5 @@
 {
-  "name": "INK Shipping Selector",
+  "name": "ink. Shipping Selector",
   "settings": {
     "heading": {
       "label": "Heading"
