feat: Rename "Premium Shipping" to "Verified Delivery" across the application and implement mobile responsiveness for UI components.

--- a/extensions/ink-cart-selector/locales/en.default.json
+++ b/extensions/ink-cart-selector/locales/en.default.json
@@ -1,5 +1,5 @@
 {
-  "name": "ink. Shipping Selector",
+  "name": "ink. Verified Delivery Selector",
   "settings": {
     "heading": {
       "label": "Heading"
